syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message SystemParamsConfigInfo {
	//ID 
    string id=2;
	//代号 
 	string code=3;
	//项 
    string key=4;
	//值 
    string value=5;
	//备注 
    string remark=6;
}

message QuerySystemParamsConfigRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//项 
    // @inject_tag: uri:"key" form:"key"
    string key=6;
}

message QuerySystemParamsConfigResponse{
    Code code=1;
    string message=2;
    repeated SystemParamsConfigInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllSystemParamsConfigResponse{
    Code code=1;
    string message=2;
    repeated SystemParamsConfigInfo data=3;
}

message GetSystemParamsConfigDetailResponse{
    Code code=1;
    string message=2;
    SystemParamsConfigInfo data=3;
}